--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["components/ui/*"],
-      "@dashboard/*": ["components/dashboard/*"]
+      "@ui/*": ["shared/components/ui/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
