--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sweetalert2": "^11.6.8",
     "swr": "^1.3.0",
     "typescript": "4.8.4"
   },
